tests/conformance/typecheck/valid/record_basic.ks
// Basic record types
val person = { name: "Alice", age: 30 }
val name = person.name
val age = person.age
