tests/conformance/typecheck/invalid/record_missing_field.ks
// Record missing field access
val person = { name: "Alice", age: 30 }
val email = person.email
